# gamedev

./: CMakeLists.txt  Makefile  README.md  asteroids.cpp  asteroids.h  breakout.cpp  breakout.h  cute_tiled.h  dungeon.cpp  dungeon.h  dungeon.txt  guess_the_number.cpp  hangman.cpp  leaper.cpp  leaper.h  opengl.cpp  opengl.h  raycaster.cpp  rock_paper_scissors.cpp  shakespeare.txt  term.h  tetris.cpp  tetris.h  tic_tac_toe.cpp  tilemap.cpp  tiny.cpp  tiny.h  tinygl.h
cmake/: FindLibtcod.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
res/: leaper.json  leaperB.json  level1.tmx
